--- a/style.css
+++ b/style.css
@@ -1,70 +1,74 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    overflow: hidden;
-    background: #fff;
+  overflow: hidden;
+  background: #fff;
 }
 
 span {
-    overflow: hidden;
-    display: block;
+  overflow: hidden;
+  display: block;
 }
 
 .loader-wrap {
-    position: fixed;
-    z-index: 10;
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    overflow: hidden;
-    align-items: center;
-    justify-content: center;
-    background: #fff;
+  position: fixed;
+  z-index: 10;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  /* background: #fff; */
 }
 
 .loader-wrap svg {
-    position: absolute;
-    top: 0;
-    width: 100vw;
-    height: 110vh;
-    fill: #1a1a1a;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 110vh;
+  fill: #1a1a1a;
+  max-width: 1440px;
 }
 
 .loader-wrap .loader-wrap-heading h1 {
-    font-size: 36px;
-    z-index: 20;
-    color: #e0e0e0;
-    text-transform: uppercase;
-    font-weight: 300;
-    font-family: Arial, sans-serif;
+  font-size: large;
+  z-index: 20;
+  color: #e0e0e0;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: Arial, sans-serif;
 }
 
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
 }
 
 .container h1 {
-    font-family: Arial, sans-serif;
-    font-weight: 300;
-    font-size: 20px;
-    color: #1a1a1a;
+  font-family: Arial, sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  color: #1a1a1a;
 }
 
 @media (max-width: 767px) {
-    .loader-wrap svg {
-        width: 200vw;
-        margin-left: -50vw;
-    }
-    .loader-wrap .loader-wrap-heading h1,
-    .container h1 {
-        font-size: 60px;
-    }
+  .loader-wrap svg {
+    width: 200vw;
+    margin-left: -50vw;
+  }
+
+  .loader-wrap-heading {
+    width: 100%;
+    text-align: center;
+    font-size:x-large;
+  }
 }
